5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4170/executions/1716_2496.log
== TEST (2019-05-09 16:08:35) 
-- CODE:
num = int(input("Digite um numero inteiro: ")
soma = 0
			 
while(num != -1)			 
	soma = soma + num	
	print(soma)
	num = int(input("Digite um numero inteiro: ")
-- ERROR:
File "XXXX", line 2
    soma = 0
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:09:23) 
-- CODE:
num = int(input("Digite um numero inteiro: ")
soma = 0 
			 
while(num != -1)			 
	soma = soma + num	
	print(soma)
	num = int(input("Digite um numero inteiro: ")
-- ERROR:
File "XXXX", line 2
    soma = 0 
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:10:03) 
-- CODE:
num = int(input("Digite um numero inteiro: ")
soma = 0 
			 
while(num != -1)			 
	soma = soma + num	
	print(soma)
	num = int(input("Digite um numero inteiro: ")
-- ERROR:
File "XXXX", line 2
    soma = 0 
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:10:38) 
-- CODE:
num = int(input("Digite um numero inteiro: ")
soma = 0 
			 
while(num != -1):			 
	soma = soma + num	
	print(soma)
	num = int(input("Digite um numero inteiro: ")
-- ERROR:
File "XXXX", line 2
    soma = 0 
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:12:04) 
-- CODE:
num = int(input("Digite um numero inteiro: ")
soma = 0 
			 
while(num != -1):			 
	soma = soma + num	
	print(soma)
	num = int(input("Digite um numero inteiro: ")
-- ERROR:
File "XXXX", line 2
    soma = 0 
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:12:46) 
-- CODE:
soma = 0 
num = int(input("Digite um numero inteiro: ")
			 
while(num != -1):			 
	soma = soma + num	
	print(soma)
	num = int(input("Digite um numero inteiro: ")
-- ERROR:
File "XXXX", line 4
    while(num != -1):			 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:13:13) 
-- CODE:
soma = 0 
num = int(input("Digite um numero inteiro: ")
			 
while (num != -1):	 
	soma = soma + num	
	print(soma)
	num = int(input("Digite um numero inteiro: ")
-- ERROR:
File "XXXX", line 4
    while (num != -1):	 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:22:00) 
-- CODE:
soma = 0 
num = int(input("Digite um numero inteiro: ")
			 
while (num != -1):	 
	soma = soma + num	
	print(soma)
	num = int(input("Digite um numero inteiro: ")
-- ERROR:
File "XXXX", line 4
    while (num != -1):	 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:16:24) 
-- CODE:
num = int(input("Digite um numero inteiro: ")
soma = 0 		 
while (num != -1):	 
	soma = soma + num	
	num = int(input("Digite um numero inteiro: ")
print(soma)				 
-- ERROR:
File "XXXX", line 2
    soma = 0 		 
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 14:55:52) 
-- CODE:
num = int(input("Digite um numero inteiro: ")
soma = 0 		 
while (num != -1):	 
	soma = soma + num	
	num = int(input("Digite um numero inteiro: ")
print(soma)				 
-- ERROR:
File "XXXX", line 2
    soma = 0 		 
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-09 14:57:02) 
-- CODE:
num = int(input("Digite um numero inteiro: ")
soma = 0 		 
while (num != -1):	 
	soma = soma + num	
	num = int(input("Digite um numero inteiro: ")
print(soma)				 
-- EXECUTION TIME:
0.757251
-- ERROR:
  File "/home/codebench/codes/1716/2496/main.py", line 2
    soma = 0 		 
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 14:57:42) 
-- CODE:
num = int(input("Digite um numero inteiro: ")			 
soma = 0			 
while (num != -1):	 
	soma = soma + num				 
	num = int(input("Digite um numero inteiro: "))			 
print(soma)				 
-- ERROR:
File "XXXX", line 2
    soma = 0			 
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-09 14:57:48) 
-- CODE:
num = int(input("Digite um numero inteiro: ")			 
soma = 0			 
while (num != -1):	 
	soma = soma + num				 
	num = int(input("Digite um numero inteiro: "))			 
print(soma)				 
-- EXECUTION TIME:
0.599103
-- ERROR:
  File "/home/codebench/codes/1716/2496/main.py", line 2
    soma = 0			 
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 14:57:58) 
-- CODE:
num = int(input("Digite um numero inteiro: "))		 
soma = 0			 
while (num != -1):	 
	soma = soma + num				 
	num = int(input("Digite um numero inteiro: "))			 
print(soma)				 
-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-09 14:58:04) 
-- CODE:
num = int(input("Digite um numero inteiro: "))		 
soma = 0			 
while (num != -1):	 
	soma = soma + num				 
	num = int(input("Digite um numero inteiro: "))			 
print(soma)				 
-- EXECUTION TIME:
0.713213
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
32653
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
